--- a/4-ml.tex
+++ b/4-ml.tex
@@ -297,7 +297,7 @@ Before delving into the model of this work, the different literature contributio
 
 While the aforementioned approaches demonstrate good accuracy in predicting low-pressure adsorption (i.e., in the limit of zero loading), they are not suitable for predicting adsorption in the high-pressure regime when the material is near saturation uptake. Grand Canonical Monte Carlo (GCMC) simulations are commonly employed for this task, but there is a lack of methods for decreasing computational costs for high-throughput screening. The challenge this thesis aims to address is predicting selectivity in the nanopores of a material at high pressure, where adsorbates interact with each other, while having access to information only on the interaction at infinite dilution. Comparing the low- and high-pressure cases provides key information on the origin of selectivity differences. Previous studies have shown that selectivity can decrease between the low and ambient pressure cases in Xe/Kr separation applications (see chapters 2 and 3), primarily due to the presence of different pore sizes and potential reorganizations caused by adsorbate--adsorbate interactions.
 
-By combining grid-based descriptors described in Chapter 3 (section~\ref{sct:grid}) with statistical characterizations of pore size, a set of ML descriptors suitable for rapid and accurate ambient-pressure selectivity prediction was proposed. These descriptors were used in an optimized XGBoost model, showcasing its performance in the case of xenon/krypton separation in the CoRE MOF 2019 database\autocite{Chung_2019}. The study presented in the following is in the process of being published, and a preprint is available on \emph{Chem. rXiv} in Ref.~\cite{Ren_2023_ml}.\footnote[1]{The corresponding data and scripts can be found at: \url{https://github.com/eren125/xe_kr_selectivity_xgb} \todo{Complete the data}}
+By combining grid-based descriptors described in Chapter 3 (section~\ref{sct:grid}) with statistical characterizations of pore size, a set of ML descriptors suitable for rapid and accurate ambient-pressure selectivity prediction was proposed. These descriptors were used in an optimized XGBoost model, showcasing its performance in the case of xenon/krypton separation in the CoRE MOF 2019 database\autocite{Chung_2019}. The study presented in the following is in the process of being published, and a preprint is already available on \emph{Chem. rXiv} in Ref.~\cite{Ren_2023_ml}.\footnote[1]{The corresponding data and scripts can be found at: \url{https://github.com/eren125/xe_kr_selectivity_xgb} \todo{Complete the data}}
 
 \subsection{Data Preparation}
 
@@ -316,7 +316,7 @@ To achieve this, a logarithmic transform of the selectivity will be considered i
 
 This methodology is tested on a set of realistic MOFs by considering the 12\,020 all-solvent removed (ASR) structures of the CoRE MOF 2019 database\autocite{Chung_2019}. After removing the disordered and the non-MOF structures as well as the ones with a large unit cell volume of \SI{20}{\cubic\nano\meter}, the database is reduced to a set of 9,748 structures. Then, with the string information given by the Zeo++ software\autocite{zeopp_Willems2012} this number is reduced to 9\,177 by removing the structures that are not tridimensional, where solvents are still detected (wrongly classified in ``all solvent removed''), or where the metal is radioactive or fissile (e.g., Pu-MOF \texttt{TAGCIP}\autocite{Diwu_2010}, Np-MOF \texttt{KASHUK}\autocite{Martin_2017}, U-MOF \texttt{ABETAE}\autocite{Jouffret_2011} or Th-MOF \texttt{ASAMUE}\autocite{Liang_2016}) --- this can be a source of risks in a nuclear waste processing plant. Furthermore, a condition on the largest cavity diameter (LCD) is added to keep only the structures with pore sizes allowing the adsorption of xenon: this is the case for 8\,523 structures with an LCD higher than \SI{4}{\angstrom} (approximately the size of a xenon molecule). This is equivalent to removing the structures with very unfavorable adsorption enthalpies, that are not promising for our adsorption-based separation.
 
-Then, the descriptors summarized below (and fully detailed in Supporting Information) were calculated on this restrained dataset. At this stage, 146 structures failed to be calculated in GCMC (the CPU used are limited to 3.75 GB, and for some materials the RASPA2 grid exceeds this memory limitation) and 83 have a zero value for the standard deviation of the pore distribution (skewness and kurtosis go to infinite and cannot be defined). A final dataset of 8,300 structures was therefore used to perform our ML-assisted method of screening the Xe/Kr adsorption selectivity. Based on this final set, {20\%} were randomly used for the test set and {80\%} were used to train our model. The goal is to learn from the training set a relationship between the descriptors and the target ambient-pressure selectivity in order to evaluate the performance on the test set. A CSV file of training and test sets can be found in the data availability section.
+Then, the descriptors summarized below (and fully detailed in Tables~\ref{tab:geom_descriptors} and~\ref{tab:energy_descriptors}) were calculated on this restrained dataset. At this stage, 146 structures failed to be calculated in GCMC (the CPU used are limited to 3.75 GB, and for some materials the RASPA2 grid exceeds this memory limitation) and 83 have a zero value for the standard deviation of the pore distribution (skewness and kurtosis go to infinite and cannot be defined). A final dataset of 8,300 structures was therefore used to perform our ML-assisted method of screening the Xe/Kr adsorption selectivity. Based on this final set, {20\%} were randomly used for the test set and {80\%} were used to train our model. The goal is to learn from the training set a relationship between the descriptors and the target ambient-pressure selectivity in order to evaluate the performance on the test set. A CSV file of training and test sets can be found in the data availability section.
 
 \subsection{Feature engineering}
 
@@ -567,7 +567,7 @@ The final model is trained on the predefined training set using XGBoost with fin
 The descriptors are ranked based on the mean absolute Shapley values of each descriptor to assess their average impact on the model output's magnitude. The importance plot, associated with these values, is presented in Figure~\ref{fgr:featimp_shap}. Although the low-selectivity exchange Gibbs free energy demonstrates significantly higher SHAP importance compared to other descriptors, it serves as a baseline to achieve a correlation similar to that shown in Figure~\ref{fgr:problem}. The other descriptors play a major role in moving the outliers of the figure closer to the diagonal line. Energy descriptors significantly influence the model's predictions, while the geometry-based new descriptors play a secondary yet essential role in assessing the differences between the low-pressure and ambient-pressure cases of interest. To gain a deeper understanding of the mechanisms enabling accurate selectivity prediction by the model --- the RMSE and MAE on the test set's selectivity being respectively $2.5$ and $1.1$. The SHAP dependence plots of each interesting descriptor will be examined, depicting the contribution to the predicted value as a function of the actual descriptor value.
 
 %% Global Interpretability dependence plot
-The partial dependence module offered by the SHAP library is applied to provide a comprehensive interpretation of the model. Although other methods, such as partial dependence plots, can be used to compute dependence plots (\emph{e.g.} partial dependence plots),\autocite{molnar2020interpretable}, maintaining a good level of consistency between global and local interpretations by utilizing the same underlying theory is desirable. The SHAP dependence plots for all descriptors in Figures~S9 and S10 exhibit distinct forms, directions, and shapes, which bodes well for the interpretability of the model. Valuable information regarding how the ML model predicts ambient-pressure selectivity was gleaned from the profile of these dependence plots.
+The partial dependence module offered by the SHAP library is applied to provide a comprehensive interpretation of the model. Although other methods, such as partial dependence plots, can be used to compute dependence plots (\emph{e.g.} partial dependence plots),\autocite{molnar2020interpretable}, maintaining a good level of consistency between global and local interpretations by utilizing the same underlying theory is desirable. The SHAP dependence plots for all descriptors (Figure~\ref{fgr:pdp_selection}) exhibit distinct forms, directions, and shapes, which bodes well for the interpretability of the model. Valuable information regarding how the ML model predicts ambient-pressure selectivity was gleaned from the profile of these dependence plots.
 
 %% strong relations
 The most important descriptor is the exchange free energy "G\_0" associated with low-pressure selectivity. Its contribution displays a very strong positive linear correlation (Figure~\ref{fgr:pdp_selection}). This descriptor establishes a baseline, on top of which other contributions either decrease the free energy (more selective) or increase it (less selective). The model can be interpreted as a combination of a baseline and smaller adjustments estimating the deviation magnitude from the ideal low dilution case. For instance, the next two descriptors "G\_900K" (\SI{900}{\kelvin} low-pressure exchange free energy) and "G\_Xe\_900K" (\SI{900}{\kelvin} low-pressure xenon adsorption free energy), further contribute to the baseline by providing information on low-pressure selectivity. Moreover, they also offer insights into the deviations necessary to differentiate structures experiencing a drop in selectivity from those maintaining their selectivity. As illustrated in Chapter 3 (Figure~\ref{fgr:H_900K} and~\ref{fgr:G_900K}), thermodynamic quantities at high pressure are closer to the \SI{900}{\kelvin} case than to the ambient temperature one. These two descriptors naturally inform the selectivity at higher pressures. In the case of "G\_900K" (Figure~\ref{fgr:pdp_selection}), blue points (corresponding to a "G\_0" of around \SI{-8}{\kilo\joule\per\mole}) can have either negative or negligible contributions, depending on the value. Values below \SI{-4}{\kilo\joule\per\mole} give a negative contribution with a linear relationship, whereas values between $-4$ and \SI{5}{\kilo\joule\per\mole} constantly yield almost zero contributions. This type of domain differentiation illustrates how the model can identify structures with a selectivity drop based on the values of a descriptor. Further examples highlighting the determination of selectivity contributions using the remaining descriptors will be presented.
@@ -628,7 +628,7 @@ One specific objective was to uncover the underlying reasons for the observed se
 The final ML model could be used in a well-designed workflow to find the best performing materials. For instance, structures with pores that are unable to accommodate xenon could be filtered out, followed by the application of a low-pressure selectivity calculation to eliminate selectivity values below a specified threshold. Finally, the structures that would encounter a drop in selectivity could be removed using the model. As a proof of concept, the methodology was tested on Xe/Kr separation, which represents one of the simplest adsorption systems (monoatomic species and the absence of electrostatic interactions). A similar approach could be generalized to other separation applications by calculating the infinite dilution energies with a more conventional method (\emph{e.g.} Widom's insertion), while adjusting the definitions of descriptors to suit the adsorbates of interest.
 
 %% Drawbacks + perspectives
-The ambition of this study was to introduce new descriptor ideas that contribute to the development of increasingly efficient screening methodologies for identifying optimal materials for specific applications. However, similar to other studies in this field, the simulations in this study relied on a set of strong assumptions, wherein rigid frameworks and non-polarized classical forcefields were employed. Previous literature suggested that the most selective materials for Xe/Kr separation were designed and synthesized based on the effect of open-metal sites, leveraging the difference in polarizability between the two molecules to achieve efficient separation.\autocite{Li_2019, Pei_2022} Moreover, the flexibility of structures could be achieved by employing flexible forcefields with appropriate simulation methodologies\autocite{Bousquet2012} or by conducting multiple rigid simulations using snapshots from NPT simulations\autocite{Witman_2017}. The simulations could be enhanced at the cost of CPU time by coupling them with a reduction in simulation time, such as the one presented in this chapter. The pursuit of ever-faster evaluation tools enabled the exploration of more complex properties and the discovery of structures with increasingly relevant characteristics. Further discussion on these potential improvements will be presented in greater detail in Chapter 6.
+The ambition of this study was to introduce new descriptor ideas that contribute to the development of increasingly efficient screening methodologies for identifying optimal materials for specific applications. However, similar to other studies in this field, the simulations in this study relied on a set of strong assumptions, wherein rigid frameworks and non-polarized classical forcefields were employed. Previous literature suggested that the most selective materials were designed and synthesized  for Xe/Kr separation based on the effect of open-metal sites, leveraging the difference in polarizability between the two molecules to achieve efficient separation.\autocite{Li_2019, Pei_2022} Moreover, the flexibility of structures could be achieved by employing flexible forcefields with appropriate simulation methodologies\autocite{Bousquet2012} or by conducting multiple rigid simulations using snapshots from NPT simulations\autocite{Witman_2017}. The simulations could be enhanced at the cost of CPU time by coupling them with a reduction in simulation time, such as the one presented in this chapter. The pursuit of ever-faster evaluation tools enabled the exploration of more complex properties and the discovery of structures with increasingly relevant characteristics. Further discussion on these potential improvements will be presented in greater detail in Chapter 6.
 
 \vspace{1cm}
 
