--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -30,7 +30,7 @@ To gain a better understanding of the Brownian motion of suspended particles in 
 \begin{equation}\label{eq:einstein}
   \langle {r(t)}^2 \rangle = 2dD\e{diff}t = 6D\e{diff}t
 \end{equation}
-where  $d$ is the dimension of the space in which the particle diffuses ($d=3$ in a volume) and $r(t)$ is the displacement of a particle from the time $0$ to $t$. The brackets represent the average on all independent trajectories (different particles and different time origins). This equation can be generalized to the diffusion of an adsorbate in the adsorbed phase, which describes the ease of particle movement within a nanoporous material. A low diffusion coefficient indicates limited access to the structure's pores, as illustrated in Figure~\ref{fgr:intro_diffusion}. It is worth mentioning that in porous media, non-Fickian diffusion processes can occur, the MSD has a linear relation to time. For example, when particles are confined in a one-dimensional channel that does not allow a particle to jump over another, the dynamics is described by a single file diffusion equation, and the MSD has square root relation to time.\autocite{Levitt_1973}
+where  $d$ is the dimension of the space in which the particle diffuses ($d=3$ in a volume) and $r(t)$ is the displacement of a particle from the time $0$ to $t$. The brackets represent the average on all independent trajectories (different particles and different time origins). This equation can be generalized to the diffusion of an adsorbate in the adsorbed phase, which describes the ease of particle movement within a nanoporous material. A low diffusion coefficient indicates limited access to the structure's pores, as illustrated in Figure~\ref{fgr:intro_diffusion}. It is worth mentioning that in porous media, non-Fickian diffusion processes can occur, the MSD has a linear relation to time. For example, when particles are confined in a one-dimensional channel that does not allow a particle to jump over another, the dynamic is described by a single file diffusion equation, and the MSD has square root relation to time.\autocite{Levitt_1973}
 
 To model the diffusion coefficient of xenon and krypton inside nanoporous materials, molecular simulations of the adsorbate displacements will be utilized. Although alternative approaches such as the Green-Kubo equation exist, the comparatively less complex Einstein law is preferred for self-diffusion calculations, as demonstrated by this cited comparative study~\cite{Maginn_2020}. This section will focus on various simulation techniques that can be used for evaluating diffusion in high-throughput screenings. Different methods of assessing the MSD of diffusing particles will be presented, starting from the straightforward approach of molecular dynamics to faster methodologies more suitable for screenings, such as machine-learned surrogate models and kinetic Monte Carlo simulations.
 
@@ -88,7 +88,7 @@ Following a similar approach to the thermodynamic screening (Chapters~2--4), the
 
 \subsection{Lattice kinetic Monte Carlo}
 
-The lattice kinetic Monte Carlo method relies on a predefined lattice of stable points corresponding to adsorption sites. Each site is connected to another if there exists a diffusion path (narrow channel) between them. To calculate the probability of transition from one site to another, a transition state (TS) within the narrow channel corresponding to the highest energy point along the minimal energy diffusion path (the saddle point), must be defined. In the transition state therory, the transition probability is defined based on the energy barrier that must be overcome to traverse the channel. Once the lattice is established, the adsorbate can be propagated from one site to another using the different transition probabilities. Although this approach yields a coarse-grained trajectory compared to the one obtained through MD simulations, it is sufficient for computing the MSD and the diffusion coefficient.
+The lattice kinetic Monte Carlo method relies on a predefined lattice of stable points corresponding to adsorption sites. Each site is connected to another if there exists a diffusion path (narrow channel) between them. To calculate the probability of transition from one site to another, a transition state (TS) within the narrow channel corresponding to the highest energy point along the minimal energy diffusion path (the saddle point), must be defined. In the transition state theory, the transition probability is defined based on the energy barrier that must be overcome to traverse the channel. Once the lattice is established, the adsorbate can be propagated from one site to another using the different transition probabilities. Although this approach yields a coarse-grained trajectory compared to the one obtained through MD simulations, it is sufficient for computing the MSD and the diffusion coefficient.
 
 
 \begin{figure}[ht]
@@ -162,11 +162,11 @@ A transition from the ballistic regime to the pseudo-diffusional regime (where t
 
 By fitting a linear relation using the right plot of Figure~\ref{fgr:MSD_linear_init} and deducing the diffusion coefficient, an underestimated value of the diffusion coefficient of $2.24\,10^{-8}$~\si{\square\cm\per\s} is obtained --- it is an underestimation due to the concave nature of the MSD, which reduces the slope in the fitting process. However, this value is already a good estimation of the diffusion coefficient, considering the relatively high value of the exponent $\alpha=0.7$ in the fitting equation $K_\alpha\tau^\alpha$.
 
-To account for the randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), it is necessary to measure the effect of running different MD simulations of the value of the diffusion coefficients. The uncertainty across various MD simulations with different initial positions determined by different random seeds needs to be quantified. In RASPA2, the random seed is equal to the UNIX time upon launching the MD simulation, ensuring that each of the $10$ different MD simulations is assigned a different random seed while using the exact same parameters, as previously mentioned. The diffusion coefficient values were averaged over these simulations, resulting in an average diffusion coefficient of $2.13\,10^{-8}$~\si{\square\cm\per\s} and a standard deviation of $0.37\,10^{-8}$~\si{\square\cm\per\s}, representing approximately {17\%} of the average value. The uncertainty in the diffusion coefficient is estimated to be around {17\%} for a relatively low coefficient of around $10^{-8}$ cm²/s, with lower uncertainty expected for less obstructive materials. It is worth mentioning that in the particular case of \texttt{KAXQIL}, where all pores are symmetrically equivalent, the dynamics is more straightforward than for more complex pore architectures that will be tackled later in this chapter.
+To account for the randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), it is necessary to measure the effect of running different MD simulations of the value of the diffusion coefficients. The uncertainty across various MD simulations with different initial positions determined by different random seeds needs to be quantified. In RASPA2, the random seed is equal to the UNIX time upon launching the MD simulation, ensuring that each of the $10$ different MD simulations is assigned a different random seed while using the exact same parameters, as previously mentioned. The diffusion coefficient values were averaged over these simulations, resulting in an average diffusion coefficient of $2.13\,10^{-8}$~\si{\square\cm\per\s} and a standard deviation of $0.37\,10^{-8}$~\si{\square\cm\per\s}, representing approximately {17\%} of the average value. The uncertainty in the diffusion coefficient is estimated to be around {17\%} for a relatively low coefficient of around $10^{-8}$ cm²/s, with lower uncertainty expected for less obstructive materials. It is worth mentioning that in the particular case of \texttt{KAXQIL}, where all pores are symmetrically equivalent, the dynamics are more straightforward than for more complex pore architectures that will be tackled later in this chapter.
 
-Increased confidence in the method led to the exploration of higher timescales beyond the reach the previous MD simulation, as the occurrence of the diffusion regime was observed at the \SI{10}{\ns} timescale. An MD simulation is consequently performed with a 1~\si{\fs}-timestep and 2.5 billion steps on the same \texttt{KAXQIL} structure. With this longer simulation, much larger timescales could be probed such as the one between {2} to {47}~\si{\ns}, which was confirmed as a linear diffusion regime in the MSD plot. A self-diffusion coefficient value of $1.7\,10^{-8}$~\si{\square\cm\per\s} was determined for xenon. This value is slightly lower than the one determined in the yet non-linear regime ($\alpha=0.7$) from the previous approach.
+Increased confidence in the method led to the exploration of higher timescales beyond the reach the previous MD simulation, as the occurrence of the diffusion regime was observed at the \SI{10}{\ns} timescale. An MD simulation is consequently performed with a 1~\si{\fs}-timestep and 2.5 billion steps on the same \texttt{KAXQIL} structure. With this longer simulation, much larger timescales could be probed such as the one between {2} and {47}~\si{\ns}, which was confirmed as a linear diffusion regime in the MSD plot. A self-diffusion coefficient value of $1.7\,10^{-8}$~\si{\square\cm\per\s} was determined for xenon. This value is slightly lower than the one determined in the yet non-linear regime ($\alpha=0.7$) from the previous approach.
 
-This previous simulation can be considered as the most accurate one, but it is not scalable on an entire database of thousands of structures since it requires 5--6 days to run all the MD steps. To speed up the process, we propose an increase of the timestep value to 5~\si{\fs} with 5 times less MD steps (500 million), hence reducing the time required to the order of a day. This simulation presents a linear regime in the {2}--{47}~\si{\ns} timescale with a diffusion coefficient value of $1.1\,10^{-8}$~\si{\square\cm\per\s}, which is consistent with the previously reported approaches. 
+This previous simulation can be considered as the most accurate one, but it is not scalable on an entire database of thousands of structures since it requires 5--6 days to run all the MD steps. To speed up the process, we propose an increase of the time step value to 5~\si{\fs} with 5 times fewer MD steps (500 million), hence reducing the time required to the order of a day. This simulation presents a linear regime in the {2}--{47}~\si{\ns} timescale with a diffusion coefficient value of $1.1\,10^{-8}$~\si{\square\cm\per\s}, whose order of magnitude is consistent with the previously reported approaches. For diffusion coefficient calculations, the primary objective remains an assessment of the order of magnitude of the values. Consequently, faster and less accurate methods are preferred in a screening approach.
 
 \begin{figure}[ht]
   \centering
@@ -181,9 +181,9 @@ To further support the use of a higher time integration step, the origin of the 
 
 \subsubsection{Screening procedure}
 
-To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations, such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, only 432 structures \todo{Average number of timsteps completed} fully completed the simulations at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be utilized for determining diffusion coefficients. In fact, 5,125 MSD data are exploitable even if the total 500 millions steps were only partially completed. 
+To incorporate transport properties into the analysis, MD calculations were performed on 6,525 non-disordered, highly selective materials for xenon or krypton at infinite dilution (no guest--guest interactions). For each material, MD simulations were planned with 500 million steps using the RASPA2 script on the calculation machines (that are restricted to 24-hour runs). To let the simulation run a maximum of steps, 2 to 3 restarts were performed on the slowest simulations such that every MSD data was obtained after 2--3 days. Out of the planned 500 million steps, not all calculations are \todo{Average number of timesteps completed} fully completed the simulations at the end of the process, but this does not imply that the MSD data (printed along the MD simulation) cannot be utilized for determining diffusion coefficients. In fact, 5,125 MSD data are exploitable even if the total 500 million steps were only partially completed. 
 
-To determine the diffusion coefficients, two timescales (2--47\si{\ns} and 50--950~\si{\ns}) were analyzed to fit the MSD with a linear function. The linear fit with the highest determination coefficient (within the range of $0$ to $1$) for both timescales was chosen to obtain a diffusion coefficient value. After this step, structures with a determination coefficient (R$^2$ that measures the correlation) below $0.9$ were removed, leaving 5,125 structures for drawing structure-diffusivity relationships --- these structures, for which there is a high degree of confidence in the diffusion coefficient values, will be comparatively studied against different geometrical and thermodynamic quantities in this section. Finally, the final 5,125 diffusion coefficients obtained correspond to the slopes of the best linear fit between the 2--47\si{\ns} and 50--950~\si{\ns} timescales.\todo{check FX, if better}
+To determine the diffusion coefficients, two timescales (2--47\si{\ns} and 50--950~\si{\ns}) are sequentially analyzed to fit the MSD with a linear function. The linear fit with the highest determination coefficient (within the range of $0$ to $1$) for both timescales is chosen to obtain a diffusion coefficient value. After this step, structures with a determination coefficient (R$^2$ that measures the correlation) below $0.9$ are removed, leaving 5,125 structures for drawing structure-diffusivity relationships --- these structures, for which there is a high degree of confidence in the diffusion coefficient values, will be comparatively studied against different geometrical and thermodynamic quantities in this section. Finally, the final 5,125 diffusion coefficients obtained correspond to the slopes of the best linear fit out of the 2--47\si{\ns} and 50--950~\si{\ns} timescales.
 
 This approach focuses exclusively on the linear relations between the MSD and time for determining self-diffusion at infinite dilution. The analysis does not explore the nature of the transport property (e.g., single-file diffusion\autocite{Lin_2005}), by comparing, for example, the exponent of the generalized formula $\text{MSD}(\tau) = K_\alpha\tau^\alpha$ with structural descriptors. The more complex diffusion at higher loading values, which may be more accurately described by a collective diffusion coefficient instead of the self-diffusion coefficient, is also not studied. The objective of this study is to identify materials that do not present kinetic limitations, as observed in the case of \texttt{KAXQIL}\autocite{Banerjee2012} (where the diffusion coefficient of xenon is approximately ten thousand times lower in the material than outside).
 
@@ -191,7 +191,7 @@ This approach focuses exclusively on the linear relations between the MSD and ti
 
 In this section, different relationships between the diffusion coefficient and simple geometrical descriptors will be presented. A forcefield-dependent definition of radii was chosen to ensure better correlation with the results of the MD simulation that utilized the UFF forcefield. The geometrical descriptors were calculated using Zeo++ and these radii to determine the PLD, the largest sphere diameter D$_{if}$ along a free path, the surface area, and the pore volume, as explained in Chapter 2. The use of UFF-based radii for the PLD was further justified by the original paper~\cite{Hung_2021}, which demonstrated a stronger correlation between the PLD and the diffusion constant. This correlation can also be observed in Figure~\ref{fgr:diff_pld}. The PLD calculated using the standard CCDC-defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article~\cite{Haldoupis_2010} (see Figure~\ref{fgr:Haldoupis_2010} in Chapter 1), there is a linear relationship between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD. This linear relationship is much noisier for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
 
-Beyond the practical considerations regarding the calculation of geometrical descriptors, the PLD outlines the variation of diffusion performance within nanoporous materials. First, a linear relationship was observed, as previously highlighted, followed by a plateau. In the first zone, xenon is constrained by channels narrower than its kinetic radius. The diffusion coefficient rises with increasing channel width, and this positive correlation persists until the channel width exceeds approximately \SI{4.6}{\angstrom}. Beyond this threshold, the diffusion coefficient stabilizes around $3\,10^{-4}$\si{\square\cm\per\s}. Variations in this plateau region can only be attributed to other phenomena, such as tortuosity within nanopores or the chemical nature of the surface of nanopores. The diffusion coefficient value can be interpreted as the diffusion coefficient of a ``free'' xenon, which is less influenced by the surrounding pore surface. For PLD values exceeding \SI{5}{\angstrom}, the channels are sufficiently wide to allow for xenon toonly undergo a minor slowdown. These findings are consistent with experimental data that measured the diffusion coefficient of xenon dissolved in water at different temperature conditions, where a value of $10^{-5}$~\si{\square\cm\per\s} at \SI{303}{\kelvin} was obtained \autocite{Wise1968}, aligning with the values observed centered around $3\,10^{-4}$~\si{\square\cm\per\s} at the plateau.
+Beyond the practical considerations regarding the calculation of geometrical descriptors, the PLD outlines the variation of diffusion performance within nanoporous materials. First, a linear relationship was observed, as previously highlighted, followed by a plateau. In the first zone, xenon is constrained by channels narrower than its kinetic radius. The diffusion coefficient rises with increasing channel width, and this positive correlation persists until the channel width exceeds approximately \SI{4.6}{\angstrom}. Beyond this threshold, the diffusion coefficient stabilizes around $3\,10^{-4}$\si{\square\cm\per\s}. Variations in this plateau region can only be attributed to other phenomena, such as tortuosity within nanopores or the chemical nature of the surface of nanopores. The diffusion coefficient value can be interpreted as the diffusion coefficient of a ``free'' xenon, which is less influenced by the surrounding pore surface. For PLD values exceeding \SI{5}{\angstrom}, the channels are sufficiently wide to allow for xenon to only undergo a minor slowdown. These findings are consistent with experimental data that measured the diffusion coefficient of xenon dissolved in water at different temperature conditions, where a value of $10^{-5}$~\si{\square\cm\per\s} at \SI{303}{\kelvin} was obtained \autocite{Wise1968}, aligning with the values observed centered around $3\,10^{-4}$~\si{\square\cm\per\s} at the plateau.
 
 \begin{figure}[ht]
   \centering
@@ -210,7 +210,7 @@ If the channel dimensions (determined using Zeo++) are analyzed, partial informa
     \caption{ Distributions of the base-10 logarithm of the diffusion coefficients of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channel, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:scatter_diffusion_chandim}
 \end{figure}
 
-For this reason, the distribution of diffusion coefficients that depend on the dimensionality of the channels within the framework was plotted in Figure~\ref{fgr:hist_diffusion_chandim}. The distribution for structures containing 1D structures is characterized by a much heavier tail in terms of low diffusion coefficients. Structures with 1D channels are more likely to have very low diffusion coefficients below $3\,10^{-8}$~\si{\square\cm\per\s}. The vast majority of structures with tridimensional channels tend to have higher diffusion coefficients between $3\,10^{-6}$~\si{\square\cm\per\s} and $10^{-4}$~\si{\square\cm\per\s}, with almost very few structures having lower diffusion coefficients. The influence of channel dimensionality on diffusion coefficients is not as pronounced for bi- and unidimensional channels. In the case of bi- and unidimensional channels, structures with diffusion coefficients between $3\,10^{-8}$~\si{\square\cm\per\s} and $3\,10^{-6}$~\si{\square\cm\per\s} are more common, although less frequent in theory. Therefore, the dimensionality of the channels can influence the values of diffusion coefficients, although the relationship is not as clear as for PLD.
+For this reason, the distribution of diffusion coefficients that depend on the dimensionality of the channels within the framework was plotted in Figure~\ref{fgr:hist_diffusion_chandim}. The distribution for structures containing 1D structures is characterized by a much heavier tail in terms of low diffusion coefficients. Structures with 1D channels are more likely to have very low diffusion coefficients below $3\,10^{-8}$~\si{\square\cm\per\s}. The vast majority of structures with tridimensional channels tend to have higher diffusion coefficients between $3\,10^{-6}$~\si{\square\cm\per\s} and $10^{-4}$~\si{\square\cm\per\s}, with very few structures having lower diffusion coefficients. The influence of channel dimensionality on diffusion coefficients is not as pronounced for bi- and unidimensional channels. In the case of bi- and unidimensional channels, structures with diffusion coefficients between $3\,10^{-8}$~\si{\square\cm\per\s} and $3\,10^{-6}$~\si{\square\cm\per\s} are more common, although less frequent in theory. Therefore, the dimensionality of the channels can influence the values of diffusion coefficients, although the relationship is not as clear as for PLD.
 
 \begin{figure}[ht]
   \centering
@@ -261,7 +261,7 @@ The comparison between xenon/krypton selectivity at infinite dilution and xenon/
   \centering
     \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_xe-s0-lcd.pdf}
     \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_kr-s0-lcd.pdf}
-    \caption{On the left panel, the Xe/Kr diffusion selectivity (ratio of the diffusion coefficients) is plotted against the Xe/Kr selectivity values at infinite diluation (calculated by Widom insertion), and the points are color-coded by the largest cavity diameter within a diffusion path D$_{if}$. On the right panel, the same plot is now color-coded with the average dimension of the channels of the nanoporous structures associated. }\label{fgr:diff_s0_lcd}
+    \caption{On the left panel, the Xe/Kr diffusion selectivity (ratio of the diffusion coefficients) is plotted against the Xe/Kr selectivity values at infinite dilution (calculated by Widom insertion), and the points are color-coded by the largest cavity diameter within a diffusion path D$_{if}$. On the right panel, the same plot is now color-coded with the average dimension of the channels of the nanoporous structures associated. }\label{fgr:diff_s0_lcd}
 \end{figure}
 
 The transport properties in a separation process are generally evaluated using the ratio of diffusion coefficients or the diffusion selectivity as performance metrics. For xenon and krypton, the diffusion selectivity can be defined as follows:\autocite{Krishna_2010}
@@ -361,7 +361,7 @@ This noteworthy behavior of adsorption  \texttt{ADOGEH} can be explained by a sp
 
 Beyond the specific cases of \texttt{OQESAF} and \texttt{ADOGEH}, other nanoporous materials exhibit lower diffusion selectivity values. For instance, all the other materials listed in Table~\ref{table:diff} have diffusion selectivity values ranging between $0.2$ and $1.4$. The diffusion selectivity and xenon diffusion coefficient vary depending on the shape and size distribution of the porous channels. A weak correlation can be observed between the pore size characteristics (LCD\ex{UFF}$-$PLD\ex{UFF}) and diffusion performance for structures with an LCD\ex{UFF} value below \SI{6}{\angstrom} --- in these structures, pore size has a higher chance of influencing the transport properties. The correlation arises from the fact that a higher difference between LCD and PLD corresponds to a higher energy barrier for xenon to move within the channels, consequently decreasing the diffusion coefficient. However, when considering all available structures, the correlation disappears since the movement of diffusing xenon is less influenced by the pore walls in materials with higher LCD values. Moreover, for LCD values higher than \SI{7}{\angstrom}, the diffusion coefficient stabilizes around $10^{-5}$\si{\square\cm\per\s}, as depicted in Figure\ref{fgr:diff_H_lcd}. 
 
-Structures with high ambient-pressure selectivity (Figure~\ref{fgr:porediff_c}) exhibit a negative linear relationship between the LCD-PLD difference and xenon/krypton diffusion selectivity. This is due to the fact that highly selective materials have pore sizes close to that of xenon atom, as explained in previous chapters. The effect on the Xe diffusion coefficient can also be extended to the Xe/Kr diffusion selectivity, as suggested by the noisy and stable values of krypton diffusion coefficients around $3\,10^{-5}$\si{\square\cm\per\s} (refer to Figure\ref{fgr:diff_s0_lcd}). The weakness of the correlation can be explained by the inherent uncertainty in the MD methodology for diffusion coefficient calculation (estimated to be around {20\%} for the material \texttt{KAXQIL}), as well as other phenomena not accounted for by the simple arithmetic difference of two pore characteristics. The tortuosity of the channel, for instance, could contribute to the comprehension of diffusion coefficient values, but it is challenging to quantify in a tridimensional space. While various channel shapes will be qualitatively discussed in the following examples, the current work does not make an attempt to quantify these effects.
+Structures with high ambient-pressure selectivity (Figure~\ref{fgr:porediff_c}) exhibit a negative linear relationship between the LCD-PLD difference and xenon/krypton diffusion selectivity. This is due to the fact that highly selective materials have pore sizes close to that of a xenon atom, as explained in previous chapters. The effect on the Xe diffusion coefficient can also be extended to the Xe/Kr diffusion selectivity, as suggested by the noisy and stable values of krypton diffusion coefficients around $3\,10^{-5}$\si{\square\cm\per\s} (refer to Figure\ref{fgr:diff_s0_lcd}). The weakness of the correlation can be explained by the inherent uncertainty in the MD methodology for diffusion coefficient calculation (estimated to be around {20\%} for the material \texttt{KAXQIL}), as well as other phenomena not accounted for by the simple arithmetic difference of two pore characteristics. The tortuosity of the channel, for instance, could contribute to the comprehension of diffusion coefficient values, but it is challenging to quantify in a tridimensional space. While various channel shapes will be qualitatively discussed in the following examples, the current work does not make an attempt to quantify these effects.
 
 \begin{figure}[ht]
   \centering
@@ -541,7 +541,7 @@ This correlation between the energy barrier and the diffusion coefficient is con
 \begin{figure}[ht]
   \centering
     \includegraphics[width=0.6\textwidth]{figures/5-diffusion/difflog_Df-uff298K_barrier.pdf}
-    \caption{ Scatterplot of the $\log_{10}$ of the diffusion coefficient in \si{\square\cm\per\s} as a function of the PLD values and labeled by the barrier activation energy. The higher barriers seem to correspond to lower diffusion coefficients, thus echoing the correlation observed in the previous figure~\ref{fgr:barrier_diffusion}.}\label{fgr:diff_pld_barrier}
+    \caption{ Scatterplot of the $\log_{10}$ of the diffusion coefficient (in \si{\square\cm\per\s}) as a function of the PLD values and labeled by the barrier activation energy. The higher barriers seem to correspond to lower diffusion coefficients, thus echoing the correlation observed in the previous figure~\ref{fgr:barrier_diffusion}.}\label{fgr:diff_pld_barrier}
 \end{figure}
 
 This barrier activation energy descriptor completes the description of the diffusion coefficient given by PLD values. As discussed in the dedicated section, PLD values cannot distinguish between structures over \SI{6}{\angstrom} in the ``plateau'', and the difference in diffusion coefficient values was considered as noise in the previous analysis. However, Figure~\ref{fgr:diff_pld_barrier} reveals that higher values of barrier energies are associated with lower diffusion coefficients within the plateau range, thereby explaining the variations in diffusion coefficient within the plateau based on the activation barrier values.
@@ -612,7 +612,7 @@ With this parameterization, this ML model predicts the $\log_{10}$ of the diffus
     \caption{ (a) Comparison of the $\log_{10}$ of the diffusion coefficient predicted by an ML model and the true values. (b) Root mean squared errors on the same test set (20\% of all data) as a function of the fraction of the training set used to train smaller models. The error decreases as the amount of data increases and seems to stabilize near $0.25$. }
 \end{figure}
 
-The training curve (Figure~\ref{fgr:training_curve_diff}) was examined to assess whether the model had sufficient training data or required additional data. As the amount of training data increased, the error converged to $0.25$, indicating that no further data was necessary for training the model. However, it is conceivable to train a similar model using less data (50\% instead of 80\% of the total data could probably suffice to train a similar model). \todo{Add cross-validation performance as a point of comparison}
+The training curve (Figure~\ref{fgr:training_curve_diff}) was examined to assess whether the model had sufficient training data or required additional data. As the amount of training data increased, the error converged to $0.25$, indicating that no further data was necessary for training the model. However, it is conceivable to train a similar model using less data (50\% instead of 80\% of the total data could probably suffice to train a similar model). \todo{Add cross-validation performance as a point of comparison, not fortuitous}
 
 \begin{figure}[ht]
   \centering
