--- a/main.tex
+++ b/main.tex
@@ -50,6 +50,9 @@
   {\printfield{labelnumber}}
   {}
   {}
+\usepackage{url}
+\urlstyle{same}
+
 \usepackage[version=4]{mhchem}
 \usepackage{subcaption}
 
