--- a/thesis.bib
+++ b/thesis.bib
@@ -6,7 +6,10 @@
 	publisher = {American Chemical Society ({ACS})},
 	author = {Kaihang Shi and Zhao Li and Dylan M. Anstine and Dai Tang and Coray M. Colina and David S. Sholl and J. Ilja Siepmann and Randall Q. Snurr},
 	title = {Two-Dimensional Energy Histograms as Features for Machine Learning to Predict Adsorption in Diverse Nanoporous Materials},
-	journal = {J. Chem. Theory Comput.}
+	journal = {J. Chem. Theory Comput.},
+	volume = {XXXX},
+  	number = {XXX},
+  	pages = {XXX--XXX}
 }
 @article{Lagorsse_2007,
 	doi = {10.1016/j.memsci.2007.05.032},
@@ -45,7 +48,7 @@
 	pages = {7223--7234},
 	author = {Vlad Pascanu and Greco Gonz{\'{a}}lez Miera and A. Ken Inge and Bel{\'{e}}n Mart{\'{i}}n-Matute},
 	title = {Metal{\textendash}Organic Frameworks as Catalysts for Organic Synthesis: A Critical Perspective},
-	journal = {J. Am. Chem. Soc.}
+	journal = {Journal of American Chemical Society}
 }
 @article{Widom1963,
   author = { Widom, B. },
@@ -69,6 +72,7 @@
 	author = {{National Academies of Sciences, Engineering, and Medicine}},
 	year = {2019},
 	doi = {10.17226/25421},
+	pages = {7--14},
 }
 @article{Banerjee2018,
   author = { Banerjee, Debasis and Simon, Cory M. and Elsaidi, Sameh K. and Haranczyk, Maciej and Thallapally, Praveen K. },
@@ -105,7 +109,7 @@
 	pages = {7007--7010},
 	author = {Xianyin Chen and Anna M. Plonka and Debasis Banerjee and Rajamani Krishna and Herbert T. Schaef and Sanjit Ghose and Praveen K. Thallapally and John B. Parise},
 	title = {Direct Observation of Xe and Kr Adsorption in a Xe-Selective Microporous Metal{\textendash}Organic Framework},
-	journal = {J. Am. Chem. Soc.}
+	journal = {Journal of American Chemical Society}
 }
 @article{Lyu_2020,
 	doi = {10.1016/j.chempr.2020.08.008},
@@ -136,7 +140,7 @@
 @article{Colon_2017,
   author = { Col\'on, Yamil J. and G\'omez-Gualdr\'on, Diego A. and Snurr, Randall Q. },
   title = { Topologically Guided, Automated Construction of Metal--Organic Frameworks and Their Evaluation for Energy-Related Applications },
-  journal = { Cryst. Growth Des. },
+  journal = {Crystal Growth \& Design},
   year = { 2017 },
   volume = { 17 },
   issue = { 11 },
@@ -180,7 +184,7 @@
 @article{rappe1992,
   title={UFF, a full periodic table force field for molecular mechanics and molecular dynamics simulations},
   author={Rapp{\'e}, Anthony K and Casewit, Carla J and Colwell, KS and Goddard III, William A and Skiff, W Mason},
-  journal={J. Am. Chem. Soc.},
+  journal={Journal of American Chemical Society},
   volume={114},
   number={25},
   pages={10024--10035},
@@ -200,12 +204,15 @@
 	title = {Computational screening of metal-organic frameworks for xenon/krypton separation},
 	journal = {{AIChE} Journal}
 }
+
 @book{kerry2007industrial,
-  title={Industrial gas handbook: gas separation and purification},
-  author={Kerry, Frank G},
-  year={2007},
-  publisher={CRC press}
+	title={Industrial gas handbook: gas separation and purification},
+	author={Kerry, Frank G},
+	year={2007},
+	pages = {129--168},
+	publisher={CRC press}
 }
+
 @article{Groom_2016,
 	doi = {10.1107/s2052520616003954},
 	url = {https://doi.org/10.1107/s2052520616003954},
@@ -217,7 +224,7 @@
 	pages = {171--179},
 	author = {Colin R. Groom and Ian J. Bruno and Matthew P. Lightfoot and Suzanna C. Ward},
 	title = {The Cambridge Structural Database},
-	journal = {Acta Cryst. B}
+	journal = {Acta Crystallographica B}
 }
 @article{Li_2019,
 	doi = {10.1021/jacs.9b03422},
@@ -230,7 +237,7 @@
 	pages = {9358--9364},
 	author = {Liangying Li and Lidong Guo and Zhiguo Zhang and Qiwei Yang and Yiwen Yang and Zongbi Bao and Qilong Ren and Jing Li},
 	title = {A Robust Squarate-Based Metal{\textendash}Organic Framework Demonstrates Record-High Affinity and Selectivity for Xenon over Krypton},
-	journal = {J. Am. Chem. Soc.}
+	journal = {Journal of American Chemical Society}
 }
 @article{Pei_2022,
 	doi = {10.1021/jacs.1c12873},
@@ -243,7 +250,7 @@
 	pages = {3200--3209},
 	author = {Jiyan Pei and Xiao-Wen Gu and Cong-Cong Liang and Banglin Chen and Bin Li and Guodong Qian},
 	title = {Robust and Radiation-Resistant Hofmann-Type Metal{\textendash}Organic Frameworks for Record Xenon/Krypton Separation},
-	journal = {J. Am. Chem. Soc.}
+	journal = {Journal of American Chemical Society}
 }
 @article{Rycroft_2009,
 	doi = {10.1063/1.3215722},
@@ -261,7 +268,7 @@
 @article{Simon_2015,
   author = { Simon, Cory M. and Mercado, Rocio and Schnell, Sondre K. and Smit, Berend and Haranczyk, Maciej },
   title = { What Are the Best Materials To Separate a Xenon/Krypton Mixture? },
-  journal = { Chem. Mater. },
+  journal = {Chemistry of Materials},
   year = { 2015 },
   volume = { 27 },
   issue = { 12 },
@@ -284,8 +291,11 @@
   doi = {10.1021/acscentsci.2c01177},
   url = {https://doi.org/10.1021/acscentsci.2c01177},
   year = {2023},
-  month = Mar,
+  month = mar,
   publisher = {American Chemical Society ({ACS})},
+  volume = {9},
+  number = {4},
+  pages = {563--581},
   author = {Kevin Maik Jablonka and Andrew S. Rosen and Aditi S. Krishnapriyan and Berend Smit},
   title = {An Ecosystem for Digital Reticular Chemistry},
   journal = {{ACS} Central Science}
@@ -314,7 +324,7 @@
 @article{Stein_2019,
   author = { Stein, Helge S. and Gregoire, John M. },
   title = { Progress and prospects for accelerating materials science with automated and autonomous workflows },
-  journal = { Chem. Sci. },
+  journal = { Chemical Science },
   year = { 2019 },
   volume = { 10 },
   issue = { 42 },
@@ -433,7 +443,7 @@
 @article{Foster_2004,
   author = { Foster, Martin D. and Delgado Friedrichs, Olaf and Bell, Robert G. and Almeida Paz, Filipe A. and Klinowski, Jacek },
   title = { Chemical Evaluation of Hypothetical Uninodal Zeolites },
-  journal = { J. Am. Chem. Soc. },
+  journal = { Journal of American Chemical Society },
   year = { 2004 },
   volume = { 126 },
   issue = { 31 },
@@ -721,7 +731,7 @@ for Global Competitiveness},
 @misc{Matgenome,
   title = {The Materials Genome Initiative},
   year={2022},
-  note = { Available online at \url{https://www.mgi.gov/}}
+  note = { Available online at \url{https://www.mgi.gov/} and accessed on 2023-06-06}
 }
 @article{Jain_2013,
 	doi = {10.1063/1.4812323},
@@ -1003,7 +1013,7 @@ for Global Competitiveness},
 @article{Sikora_2012,
   author = { Sikora, Benjamin J. and Wilmer, Christopher E. and Greenfield, Michael L. and Snurr, Randall Q. },
   title = { Thermodynamic analysis of Xe/Kr selectivity in over {137~000} hypothetical metal--organic frameworks },
-  journal = { Chem. Sci. },
+  journal = { Chemical Science },
   year = { 2012 },
   volume = { 3 },
   issue = { 7 },
@@ -1414,7 +1424,7 @@ for Global Competitiveness},
 @article{Chibani_2019,
   author = { Chibani, Siwar and Coudert, Fran\c{c}ois-Xavier },
   title = { Systematic exploration of the mechanical properties of {13~621} inorganic compounds },
-  journal = { Chem. Sci. },
+  journal = { Chemical Science },
   year = { 2019 },
   volume = { 10 },
   issue = { 37 },
@@ -1425,7 +1435,7 @@ for Global Competitiveness},
 @article{Gaillac_2020,
   author = { Gaillac, Romain and Chibani, Siwar and Coudert, Fran\c{c}ois-Xavier },
   title = { Speeding Up Discovery of Auxetic Zeolite Frameworks by Machine Learning },
-  journal = { Chem. Mater. },
+  journal = {Chemistry of Materials},
   year = { 2020 },
   volume = { 32 },
   issue = { 6 },
@@ -1447,7 +1457,7 @@ for Global Competitiveness},
 @article{Sarikurt_2020,
   author = { Sarikurt, Sevil and Kocaba\c{s}, Tu\u{g}bey and Sevik, Cem },
   title = { High-throughput computational screening of 2D materials for thermoelectrics },
-  journal = { J. Mater. Chem. A },
+  journal = { Journal of Materials Chemistry A },
   year = { 2020 },
   volume = { 8 },
   issue = { 37 },
@@ -1606,7 +1616,7 @@ for Global Competitiveness},
 @article{Dovesi_2018,
   author = { Dovesi, Roberto and Erba, Alessandro and Orlando, Roberto and Zicovich-Wilson, Claudio M. and Civalleri, Bartolomeo and Maschio, Lorenzo and R\'erat, Michel and Casassa, Silvia and Baima, Jacopo and Salustro, Simone and Kirtman, Bernard },
   title = { Quantum-mechanical condensed matter simulations with CRYSTAL },
-  journal = { WIREs Comput Mol Sci },
+  journal = { WIREs Computational Molecular Science },
   year = { 2018 },
   volume = { 8 },
   issue = { 4 },
@@ -1660,7 +1670,7 @@ for Global Competitiveness},
 @misc{MaterialsProject,
   title = {The Materials Project},
   year={2022},
-  note = { Available online at \url{https://materialsproject.org/}}
+  note = { Available online at \url{https://materialsproject.org/} and accessed on 2023-06-06}
 }
 @article{Dagdelen_2017,
   author = { Dagdelen, John and Montoya, Joseph and de Jong, Maarten and Persson, Kristin },
@@ -1805,7 +1815,7 @@ for Global Competitiveness},
 @article{KAXQIL,
   author = { Banerjee, Debasis and Zhang, Zhijuan and Plonka, Anna M. and Li, Jing and Parise, John B. },
   title = { A Calcium Coordination Framework Having Permanent Porosity and High CO$_2$/N$_2$ Selectivity },
-  journal = { Cryst. Growth Des. },
+  journal = { Crystal Growth \& Design },
   year = { 2012 },
   volume = { 12 },
   issue = { 5 },
@@ -1904,7 +1914,7 @@ for Global Competitiveness},
 @article{WOJJOV,
   author = { Comotti, Angiolina and Bracco, Silvia and Sozzani, Piero and Horike, Satoshi and Matsuda, Ryotaro and Chen, Jinxi and Takata, Masaki and Kubota, Yoshiki and Kitagawa, Susumu },
   title = { Nanochannels of Two Distinct Cross-Sections in a Porous Al-Based Coordination Polymer },
-  journal = { J. Am. Chem. Soc. },
+  journal = { Journal of American Chemical Society },
   year = { 2008 },
   volume = { 130 },
   issue = { 41 },
@@ -1946,7 +1956,7 @@ for Global Competitiveness},
 	pages = {470--475},
 	author = {G{\'{E}}ZA HORV{\'{A}}TH and KUNITARO KAWAZOE},
 	title = {Method for the calculation of effective pore size distribution in molecular sieve carbon.},
-	journal = {J. Chem. Eng. Japan}
+	journal = {Journal of Chemical Engineering of Japan}
 }
 @article{Haynes_1973,
 	doi = {10.1007/bf02479030},
@@ -1985,7 +1995,7 @@ for Global Competitiveness},
 	pages = {9849--9867},
 	author = {Lev Sarkisov and Rocio Bueno-Perez and Mythili Sutharson and David Fairen-Jimenez},
 	title = {Materials Informatics with {PoreBlazer} v4.0 and the {CSD} {MOF} Database},
-	journal = {Chem. Mater.}
+	journal = {Chemistry of Materials}
 }
 @article{Zeo++,
 	doi = {10.1016/j.micromeso.2011.08.020},
@@ -2011,7 +2021,7 @@ for Global Competitiveness},
 	pages = {15016--15021},
 	author = {Omar K. Farha and Ibrahim Eryazici and Nak Cheon Jeong and Brad G. Hauser and Christopher E. Wilmer and Amy A. Sarjeant and Randall Q. Snurr and SonBinh T. Nguyen and A. Özgür Yazayd{\i}n and Joseph T. Hupp},
 	title = {Metal{\textendash}Organic Framework Materials with Ultrahigh Surface Areas: Is the Sky the Limit?},
-	journal = {J. Am. Chem. Soc.}
+	journal = {Journal of American Chemical Society}
 }
 @article{Detsi_2011,
 	doi = {10.1016/j.actamat.2011.08.025},
@@ -2075,7 +2085,7 @@ for Global Competitiveness},
 	pages = {16811--16831},
 	author = {Binling Chen and Zhuxian Yang and Yanqiu Zhu and Yongde Xia},
 	title = {Zeolitic imidazolate framework materials: recent progress in synthesis and applications},
-	journal = {J. Mater. Chem. A}
+	journal = {Journal of Materials Chemistry A}
 }
 @article{Wang_2012,
 	doi = {10.1039/c1cs15150a},
@@ -2113,7 +2123,7 @@ for Global Competitiveness},
 	pages = {5964--5972},
 	author = {Weigang Lu and Daqiang Yuan and Dan Zhao and Christine Inge Schilling and Oliver Plietzsch and Thierry Muller and Stefan Bräse and Johannes Guenther and Janet Blümel and Rajamani Krishna and Zhen Li and Hong-Cai Zhou},
 	title = {Porous Polymer Networks: Synthesis, Porosity, and Applications in Gas Storage/Separation},
-	journal = {Chem. Mater.}
+	journal = {Chemistry of Materials}
 }
 @article{Che_2020,
 	doi = {10.1016/j.chempr.2020.08.002},
@@ -2138,7 +2148,7 @@ for Global Competitiveness},
 	pages = {15891--15899},
 	author = {Chenxu Wang and Chenxuan Li and Evan R. C. Rutledge and Sai Che and Jongbok Lee and Alexander J. Kalin and Caili Zhang and Hong-Cai Zhou and Zi-Hao Guo and Lei Fang},
 	title = {Aromatic porous polymer network membranes for organic solvent nanofiltration under extreme conditions},
-	journal = {J. Mater. Chem. A}
+	journal = {Journal of Materials Chemistry A}
 }
 @article{Feng_2012,
 	doi = {10.1039/c2cs35157a},
@@ -2176,7 +2186,7 @@ for Global Competitiveness},
 	pages = {10401--10402},
 	author = {O. M. Yaghi and Hailian Li},
 	title = {Hydrothermal Synthesis of a Metal-Organic Framework Containing Large Rectangular Channels},
-	journal = {J. Am. Chem. Soc.}
+	journal = {Journal of American Chemical Society}
 }
 @article{Xu_2022,
 	doi = {10.3390/membranes12121205},
@@ -2202,7 +2212,7 @@ for Global Competitiveness},
 	pages = {3606--3607},
 	author = {Brendan F. Abrahams and Bernard F. Hoskins and Richard Robson},
 	title = {A new type of infinite 3D polymeric network containing 4-connected, peripherally-linked metalloporphyrin building blocks},
-	journal = {J. Am. Chem. Soc.}
+	journal = {Journal of American Chemical Society}
 }
 @article{Li_1999,
 	doi = {10.1038/46248},
@@ -2225,6 +2235,7 @@ for Global Competitiveness},
 	publisher = {American Association for the Advancement of Science ({AAAS})},
 	volume = {341},
 	number = {6149},
+	pages = {},
 	author = {Hiroyasu Furukawa and Kyle E. Cordova and Michael O'Keeffe and Omar M. Yaghi},
 	title = {The Chemistry and Applications of Metal-Organic Frameworks},
 	journal = {Science}
@@ -2278,7 +2289,7 @@ for Global Competitiveness},
 	pages = {2958--2967},
 	author = {Zhonglin Cao and Rishikesh Magar and Yuyang Wang and Amir Barati Farimani},
 	title = {{MOFormer}: Self-Supervised Transformer Model for Metal{\textendash}Organic Framework Property Prediction},
-	journal = {J. Am. Chem. Soc.}
+	journal = {Journal of American Chemical Society}
 }
 @article{Li_2022,
 	doi = {10.1039/d2sc01254e},
@@ -2290,7 +2301,7 @@ for Global Competitiveness},
 	pages = {7990--8002},
 	author = {Aurelia Li and Rocio Bueno-Perez and David Madden and David Fairen-Jimenez},
 	title = {From computational high-throughput screenings to the lab: taking metal{\textendash}organic frameworks out of the computer},
-	journal = {Chem. Sci.}
+	journal = {Chemical Science}
 }
 @article{Wang_2014,
 	doi = {10.1039/c3sc52348a},
@@ -2302,7 +2313,7 @@ for Global Competitiveness},
 	pages = {620--624},
 	author = {Hao Wang and Kexin Yao and Zhijuan Zhang and Jacek Jagiello and Qihan Gong and Yu Han and Jing Li},
 	title = {The first example of commensurate adsorption of atomic gas in a {MOF} and effective separation of xenon from other noble gases},
-	journal = {Chem. Sci.}
+	journal = {Chemical Science}
 }
 @article{Tao_2020,
 	doi = {10.1021/acs.inorgchem.0c01766},
@@ -2452,6 +2463,7 @@ for Global Competitiveness},
 	publisher = {American Physical Society ({APS})},
 	volume = {10},
 	number = {3},
+	pages = {},
 	author = {I. S. Abramov and E. D. Gospodchikov and A. G. Shalashov},
 	title = {Extreme-Ultraviolet Light Source for Lithography Based on an Expanding Jet of Dense Xenon Plasma Supported by Microwaves},
 	journal = {Phys. Rev. Applied}
@@ -2470,14 +2482,14 @@ for Global Competitiveness},
 @misc{distill_accident, 
  	title={Explosion in an Air Distillation Unit}, 
 	url={https://www.aria.developpement-durable.gouv.fr/accident/23132_en/?lang=en}, 
-	author={French Sustainable Development \& Environment Ministery}, 
-	note = {Accessed: 2023-04-27}
+	author={{French Sustainable Development \& Environment Ministery}}, 
+	note = {Available online at \url{https://www.aria.developpement-durable.gouv.fr/accident/23132_en/?lang=en} and accessed on 2023-04-27}
 } 
 @misc{distill_accident2, 
  	title={Explosion in a petrochemical plant}, 
 	url={https://www.aria.developpement-durable.gouv.fr/accident/11603_en/?lang=en}, 
-	author={French Sustainable Development \& Environment Ministery}, 
-	note = {Accessed: 2023-04-27}
+	author={{French Sustainable Development \& Environment Ministery}}, 
+	note = {Available online at \url{https://www.aria.developpement-durable.gouv.fr/accident/11603_en/?lang=en} and accessed on 2023-04-27}
 } 
 @techreport{Blomeke_1969,
 	doi = {10.2172/4731193},
@@ -2534,7 +2546,7 @@ for Global Competitiveness},
 	pages = {983--990},
 	author = {P. A. Vaughan},
 	title = {The crystal structure of the zeolite ferrierite},
-	journal = {Acta Crystallogr}
+	journal = {Acta Crystallographica}
 }
 @article{vol_Ongari2017,
 	doi = {10.1021/acs.langmuir.7b01682},
@@ -2625,7 +2637,7 @@ for Global Competitiveness},
   year={2016},
   author = {Cory Simon},
   editor = {github},
-  note = { Available online at \url{http://corysimon.github.io/articles/hoa/}},
+  note = { Available online at \url{http://corysimon.github.io/articles/hoa/} and accessed on 2023-06-06},
   lastchecked = {2023-05-03}
 }
 @article{dubbeldam2016,
@@ -2808,7 +2820,7 @@ for Global Competitiveness},
 	pages = {9849--9867},
 	author = {Lev Sarkisov and Rocio Bueno-Perez and Mythili Sutharson and David Fairen-Jimenez},
 	title = {Materials Informatics with {PoreBlazer} v4.0 and the {CSD} {MOF} Database},
-	journal = {Chem. Mater.}
+	journal = {Chemistry of Materials}
 }
 @article{Banerjee_2012,
   doi = {10.1021/cg300274n},
@@ -2821,7 +2833,7 @@ for Global Competitiveness},
   pages = {2162--2165},
   author = {Debasis Banerjee and Zhijuan Zhang and Anna M. Plonka and Jing Li and John B. Parise},
   title = {A Calcium Coordination Framework Having Permanent Porosity and High {CO}$_\text{2}$/{N}$_\text{2}$  Selectivity},
-  journal = {Cryst. Growth Des.}
+  journal = {Crystal Growth \& Design}
 }
 @article{Wojdyr_2022,
 	doi = {10.21105/joss.04200},
@@ -2900,16 +2912,26 @@ URL = {https://doi.org/10.1137/0216006},
   url = {http://doi.org/10.1063/1.4738776},
 }
 @article{shapley1953value,
-  title={A value for {$n$}-person games},
-  author={Shapley, Lloyd S and others},
-  year={1953},
-  publisher={Princeton University Press Princeton}
+url = {https://doi.org/10.1515/9781400881970-018},
+title = {A Value for {$n$}-Person Games},
+booktitle = {Contributions to the Theory of Games (AM-28), Volume II},
+author = {L. S. Shapley},
+editor = {Harold William Kuhn and Albert William Tucker},
+publisher = {Princeton University Press},
+address = {Princeton},
+pages = {307--318},
+doi = {doi:10.1515/9781400881970-018},
+isbn = {9781400881970},
+year = {1953},
+lastchecked = {2023-07-08}
 }
 @misc{molnar2020interpretable,
   title={Interpretable machine learning},
   author={Molnar, Christoph},
   year={2023},
-  howpublished={Available online at \url{https://christophm.github.io/interpretable-ml-book/}}
+  note={Available online at \url{https://christophm.github.io/interpretable-ml-book/} and accessed on 2023-05-21},
+  chapter = {9.5--9.6},
+
 }
 @inproceedings{SHAP,
  author = {Lundberg, Scott M and Lee, Su-In},
@@ -3014,7 +3036,7 @@ URL = {https://doi.org/10.1137/0216006},
 	pages = {3814--3822},
 	author = {George S. Fanourgakis and Konstantinos Gkagkas and Emmanuel Tylianakis and George E. Froudakis},
 	title = {A Universal Machine Learning Algorithm for Large-Scale Screening of Materials},
-	journal = {J. Am. Chem. Soc.}
+	journal = {Journal of American Chemical Society}
 }  
 @article{Pardakhti_2020,
 	doi = {10.1021/acs.jpcc.9b09319},
@@ -3235,7 +3257,7 @@ URL = {https://doi.org/10.1137/0216006},
   year={},
   author = {John Tromp},
   editor = {github},
-  note = { Available online at \url{https://tromp.github.io/go/legal.html}},
+  note = { Available online at \url{https://tromp.github.io/go/legal.html} and consulted on 2023-05-21},
   lastchecked = {2023-05-21}
 }
 @misc{website_labelle,
@@ -3243,7 +3265,7 @@ URL = {https://doi.org/10.1137/0216006},
   year={2016},
   author = {François Labelle},
   editor = {},
-  note = { Available online at \url{http://wismuth.com/chess/chess.html}},
+  note = { Available online at \url{http://wismuth.com/chess/chess.html} and accessed on 2023-05-21},
   lastchecked = {2023-05-21}
 }
 @article{Silver_2016,
@@ -3273,7 +3295,7 @@ URL = {https://doi.org/10.1137/0216006},
 	journal = {Nature}
 }
 @book{azencott2022introduction,
-  title={Introduction au Machine Learning-2e {\'e}d.},
+  title={Introduction au Machine Learning -- 2$^{e}$ {\'e}dition},
   author={Azencott, Chlo{\'e}-Agathe},
   year={2022},
   publisher={Dunod}
@@ -3334,7 +3356,7 @@ URL = {https://doi.org/10.1137/0216006},
 	pages = {832--844},
 	author = {Tin Kam Ho},
 	title = {The random subspace method for constructing decision forests},
-	journal = {IEEE Trans. Pattern Anal. Machine Intell.}
+	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence}
 }
 @inproceedings{drucker1997improving,
   title={Improving regressors using boosting techniques},
@@ -3376,6 +3398,8 @@ URL = {https://doi.org/10.1137/0216006},
 @article{mason1999boosting,
   title={Boosting algorithms as gradient descent},
   author={Mason, Llew and Baxter, Jonathan and Bartlett, Peter and Frean, Marcus},
+  doi = {10.5555/3009657.3009730},
+  url = {https://dl.acm.org/doi/10.5555/3009657.3009730},
   journal={Advances in neural information processing systems},
   volume={12},
   year={1999}
@@ -3512,6 +3536,7 @@ URL = {https://doi.org/10.1137/0216006},
 	publisher = {University of Colorado at Boulder},
 	volume = {2},
 	number = {1},
+	pages = {},
 	author = {Edward J. Maginn and Richard A. Messerly and Daniel J. Carlson and Daniel R. Roe and J. Richard Elliot},
 	title = {Best Practices for Computing Transport Properties 1. Self-Diffusivity and Viscosity from Equilibrium Molecular Dynamics [Article v1.0]},
 	journal = {LiveCoMS}
@@ -3604,6 +3629,7 @@ URL = {https://doi.org/10.1137/0216006},
 	publisher = {American Physical Society ({APS})},
 	volume = {94},
 	number = {21},
+	pages = {},
 	author = {Binhua Lin and Mati Meron and Bianxiao Cui and Stuart A. Rice and Haim Diamant},
 	title = {From Random Walk to Single-File Diffusion},
 	journal = {Phys. Rev. Lett.}
@@ -3745,7 +3771,7 @@ URL = {https://doi.org/10.1137/0216006},
 	pages = {1272--1276},
 	author = {Koichi Momma and Fujio Izumi},
 	title = {\textit{VESTA 3} three-dimensional visualization of crystal, volumetric and morphology data},
-	journal = {J Appl Cryst}
+	journal = {Journal of Applied Crystallography}
 }
 @article{Blades_1956,
 	doi = {10.1139/v56-035},
@@ -3780,7 +3806,7 @@ URL = {https://doi.org/10.1137/0216006},
 @article{Xiong_2015,
   author = { Xiong, Shunshun and Liu, Qiang and Wang, Qian and Li, Wei and Tang, Yuanming and Wang, Xiaolin and Hu, Sheng and Chen, Banglin },
   title = { A flexible zinc tetrazolate framework exhibiting breathing behaviour on xenon adsorption and selective adsorption of xenon over other noble gases },
-  journal = { J. Mater. Chem. A },
+  journal = {Journal of Materials Chemistry A},
   year = { 2015 },
   volume = { 3 },
   issue = { 20 },
@@ -3801,7 +3827,7 @@ URL = {https://doi.org/10.1137/0216006},
 @article{Lee_2018,
   author = { Lee, Seung-Joon and Kim, Seongwoo and Kim, Eun-Jung and Kim, Min and Bae, Youn-Sang },
   title = { Adsorptive separation of xenon/krypton mixtures using ligand controls in a zirconium-based metal-organic framework },
-  journal = { Chem. Eng. J. },
+  journal = { Chemical Engineering Journal },
   year = { 2018 },
   volume = { 335 },
   pages = { 345--351 },
@@ -3892,6 +3918,7 @@ URL = {https://doi.org/10.1137/0216006},
   publisher = {Springer Science and Business Media {LLC}},
   volume = {10},
   number = {1},
+  pages = {},
   author = {Seyed Mohamad Moosavi and Arunraj Chidambaram and Leopold Talirz and Maciej Haranczyk and Kyriakos C. Stylianou and Berend Smit},
   title = {Capturing chemical intuition in synthesis of metal-organic frameworks},
   journal = {Nature Communications}
@@ -3904,6 +3931,7 @@ URL = {https://doi.org/10.1137/0216006},
   publisher = {Springer Science and Business Media {LLC}},
   volume = {9},
   number = {1},
+  pages = {},
   author = {R. L. Greenaway and V. Santolini and M. J. Bennison and B. M. Alston and C. J. Pugh and M. A. Little and M. Miklitz and E. G. B. Eden-Rump and R. Clowes and A. Shakil and H. J. Cuthbertson and H. Armstrong and M. E. Briggs and K. E. Jelfs and A. I. Cooper},
   title = {High-throughput discovery of organic cages and catenanes using computational screening fused with robotic synthesis},
   journal = {Nature Communications}
@@ -4026,6 +4054,7 @@ URL = {https://doi.org/10.1137/0216006},
 	publisher = {American Physical Society ({APS})},
 	volume = {94},
 	number = {21},
+	pages = {},
 	author = {Binhua Lin and Mati Meron and Bianxiao Cui and Stuart A. Rice and Haim Diamant},
 	title = {From Random Walk to Single-File Diffusion},
 	journal = {Phys. Rev. Lett.}
